<resources>
    <string name="app_name">Geren. de Combustível</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Nome dos campos -->
    <string name="salvar">Salvar</string>
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="data">Data</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="valor">Valor</string>

    <!-- Titulo das activity  -->
    <string name="title_activity_lista_precos">Lista de Preços</string>
    <string name="title_activity_lista_postos">Lista de Postos</string>
    <string name="title_activity_lista_usuarios">Lista de Usuáios</string>
    <string name="title_activity_preco">Preço</string>
    <string name="title_activity_posto">Posto</string>
    <string name="title_activity_usuario">Usuário</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
