<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/item_fundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/item_usuario_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/login"
            android:inputType=""/>

        <EditText
            android:id="@+id/item_usuario_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:imeActionId="@+id/item_usuario_login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text=""/>

        <!--<EditText-->
            <!--android:id="@+id/item_usuario_senha"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:hint="@string/senha"-->
            <!--android:inputType="numberPassword"/>-->

        <EditText
            android:id="@+id/item_usuario_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/nome"
            android:inputType="textCapWords"/>

        <AutoCompleteTextView
            android:id="@+id/item_usuario_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text=""/>

        <!--<EditText-->
            <!--android:id="@+id/item_usuario_email"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:hint="@string/email"-->
            <!--android:inputType=""/>-->

        <EditText
            android:id="@+id/item_usuario_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/telefone"
            android:inputType="phone"/>
    </LinearLayout>
</ScrollView>