<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/item_fundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/item_posto_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/nome"
            android:inputType="textCapWords"/>

        <EditText
            android:id="@+id/item_posto_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/descricao"
            android:inputType="textMultiLine"
            android:ems="3" />

        <EditText
            android:id="@+id/item_posto_latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/latitude"
            android:inputType="numberDecimal"/>

        <EditText
            android:id="@+id/item_posto_longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/longitude"
            android:inputType="numberDecimal"/>
    </LinearLayout>
</ScrollView>